--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,15 +12,16 @@ galaxy_info:
     - name: EL
       versions:
         - all
-    - name: Amazon
-      versions:
-        - Candidate
+    # - name: Amazon
+    #   versions:
+    #     - Candidate
     - name: Fedora
       versions:
-        - all
+        - "38"
+        - "39"
     - name: Ubuntu
       versions:
-        - all
+        - "all"
     - name: Debian
       versions:
         - all
