--- a/tasks/foundryvtt.yml
+++ b/tasks/foundryvtt.yml
@@ -33,6 +33,12 @@
     group: "{{ app_group }}"
   notify: foundryvtt_restart
 
+- name: foundryvtt | get docker executable path
+  ansible.builtin.command:
+    cmd: "which docker"
+  changed_when: false
+  register: foundryvtt_docker_executable_path
+
 - name: "foundryvtt | create docker-compose.yml"
   ansible.builtin.template:
     src: "docker-compose.yml.j2"
