--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -5,4 +5,4 @@
 repository:
   description: Installs and configures foundryvtt container based on felddy/foundryvtt-docker
   homepage: https://mullholland.net
-  topics: cloud, development, webserver, caddy, foundryvtt, tabletop, ansible, molecule, tox, playbook
+  topics: cloud, development, webserver, foundryvtt, tabletop, ansible, molecule, tox, playbook
