--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,7 @@
 # IMPORTANT
 # You should configure the FOUNDRY_USERNAME and FOUNDRY_PASSWORD
 # either via secrets or environment varaibles to get a running foundryvtt container
-# witout it, the container will start with an error
+# without it, the container will start with an error
 
 # General config
 foundryvtt_docker_network_name: "web"
@@ -36,7 +36,7 @@ foundryvtt_docker_secrets: []
 # Overrides FOUNDRY_USERNAME environment variable.
 # - 'foundry_username: ""'
 
-# additional docker compose environment varaibles
+# additional docker compose environment variables
 # https://github.com/felddy/foundryvtt-docker?tab=readme-ov-file#optional-variables
 foundryvtt_docker_environment_variables:
   - 'FOUNDRY_HOSTNAME: "{{ inventory_hostname }}"'
