--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,6 +3,10 @@
   ansible.builtin.include_tasks:
     file: user.yml
 
+- name: create docker network
+  ansible.builtin.include_tasks:
+    file: docker.yml
+
 - name: prepare foundryvtt
   ansible.builtin.include_tasks:
     file: foundryvtt.yml
