--- a/tasks/user.yml
+++ b/tasks/user.yml
@@ -9,8 +9,5 @@
   ansible.builtin.user:
     name: "{{ foundryvtt_docker_user }}"
     uid: "{{ foundryvtt_docker_uid }}"
+    system: "{{ foundryvtt_docker_user_system | default(omit) }}"
     state: "present"
-
-- name: user | Ensure that docker network exists
-  community.docker.docker_network:
-    name: "{{ foundryvtt_docker_network_name }}"
